# FerrousEngine

./: .gitignore  Cargo.toml  FERROUS.md  FerrousEngine_Architecture.md  PRD-GRAPHICS-ROADMAP.md  README.md  ROADMAP.md  ROADMAP_FERROUS_WEB.md  VOXEL_RENDERER_ROADMAP.md  WEB_ENGINE_ROADMAP.md  ferrous.toml  fix_runner.py  flowmap.md  mkdocs.yml
crates/ferrous_app/: Cargo.toml
crates/ferrous_app/docs/: README.md  app-builder.md  app-context.md  config.md  ferrous-app-trait.md  getting-started.md  plugins.md  render-context.md
crates/ferrous_app/src/: asset_bridge.rs  builder.rs  config.rs  context.rs  graphics.rs  lib.rs  plugin.rs  render_context.rs  runner.rs  traits.rs
crates/ferrous_app/src/api/: engine_api.rs  mod.rs
crates/ferrous_app/src/runner/: events.rs  frame.rs  mod.rs  types.rs
crates/ferrous_assets/: Cargo.toml
crates/ferrous_assets/docs/: README.md
crates/ferrous_assets/src/: asset_trait.rs  atlas.rs  font_importer.rs  gltf_importer.rs  gltf_loader.rs  handle.rs  image_importer.rs  lib.rs  msdf_gen.rs  server.rs  tables.rs  texture.rs
crates/ferrous_assets/src/font/: atlas.rs  mod.rs  msdf_gen.rs  parser.rs  path.rs
crates/ferrous_core/: Cargo.toml
crates/ferrous_core/src/: color.rs  context.rs  input.rs  key.rs  lib.rs  metrics.rs  render_stats.rs  time.rs  transform.rs  viewport.rs
crates/ferrous_core/src/api/: types.rs
crates/ferrous_core/src/elements/: cube.rs  mod.rs
crates/ferrous_core/src/scene/: blueprint.rs  camera.rs  controller.rs  gizmo.rs  material.rs  mod.rs  particles.rs  skinning.rs  systems.rs  world.rs
crates/ferrous_ecs/: Cargo.toml
crates/ferrous_ecs/src/: archetype.rs  component.rs  entity.rs  event.rs  fn_system.rs  lib.rs  query.rs  resource.rs  system.rs  system_param.rs  world.rs
crates/ferrous_editor/: Cargo.toml
crates/ferrous_editor/src/: app.rs  lib.rs  main.rs
crates/ferrous_editor/src/app/: draw_3d.rs  draw_ui.rs  mod.rs  setup.rs  types.rs  update.rs
crates/ferrous_editor/src/ui/: global_light.rs  material_inspector.rs  mod.rs
crates/ferrous_gui/: Cargo.toml  README.md
crates/ferrous_gui/docs/: ARCHITECTURE.md  README.md  constraint.md  layout.md
crates/ferrous_gui/docs/api/: core.md
crates/ferrous_gui/docs/widgets/: button.md  checkbox.md  color_picker.md  container.md  dropdown.md  image.md  label.md  panel.md  panel_resize_handle.md  slider.md  textinput.md
crates/ferrous_gui/src/: builders.rs  button.rs  canvas.rs  checkbox.rs  color_picker.rs  constraint.rs  container.rs  dropdown.rs  image.rs  key.rs  label.rs  layout.rs  lib.rs  panel.rs  panel_resize_handle.rs  renderer.rs  slider.rs  system.rs  textinput.rs  toaster.rs  ui.rs  viewport_widget.rs  widget.rs
crates/ferrous_gui/src/builder/: base.rs  button.rs  icon.rs  label.rs  mod.rs  panel.rs  widget.rs
crates/ferrous_renderer/: Cargo.toml  EXTRACTION_MAPPING.md  REFACTORING_ANALYSIS.md  REFACTORING_SUMMARY.md
crates/ferrous_renderer/docs/: README.md  architecture.md  camera.md  geometry.md  gizmo.md  materials.md  render_pass.md  render_target.md
crates/ferrous_renderer/docs/extending/: compute_pipeline.md  custom_pass.md  new_pipeline.md  world_sync.md
crates/ferrous_renderer/examples/: simple_triangle.rs
crates/ferrous_renderer/src/: camera.rs  camera_system.rs  context.rs  exporter.rs  frame_builder.rs  gizmo_system.rs  lib.rs  materials.rs  mesh.rs  pipeline.rs  render_object.rs  render_stats.rs  render_target.rs  renderer_api.rs  renderer_core.rs  renderer_passes.rs  renderer_resource.rs
crates/ferrous_renderer/src/camera/: controller.rs  mod.rs  uniform.rs
crates/ferrous_renderer/src/geometry/: mesh.rs  mod.rs  vertex.rs
crates/ferrous_renderer/src/graph/: frame_packet.rs  mod.rs  pass_trait.rs
crates/ferrous_renderer/src/meshes/: cube.rs  mod.rs
crates/ferrous_renderer/src/passes/: antialiasing_pass.rs  cel_pass.rs  compute_pass.rs  cull_pass.rs  flat_pass.rs  mod.rs  outline_pass.rs  particle_pass.rs  post_process_pass.rs  prepass.rs  procedural_sky_pass.rs  skinning_pass.rs  skybox_pass.rs  sprite_pass.rs  ssao_blur_pass.rs  ssao_pass.rs  ui_pass.rs  world_pass.rs
crates/ferrous_renderer/src/pipeline/: cel.rs  compute.rs  cull.rs  flat.rs  gizmo.rs  instancing.rs  layout.rs  mod.rs  outline.rs  pbr.rs  shadow.rs  world.rs
crates/ferrous_renderer/src/render_target/: bloom.rs  color.rs  depth.rs  hdr.rs  mod.rs  target.rs
crates/ferrous_renderer/src/resources/: buffer.rs  camera.rs  draw_indirect.rs  environment.rs  instance_buffer.rs  light.rs  material.rs  mod.rs  model_buffer.rs  readback.rs  shadow.rs  ssao.rs  texture.rs  texture_registry.rs
crates/ferrous_renderer/src/scene/: culling.rs  gizmo.rs  mod.rs  object.rs  scene_data.rs  world_sync.rs
crates/ferrous_svg/: Cargo.toml
crates/ferrous_svg/src/: lib.rs
crates/ferrous_ui_core/: Cargo.toml
crates/ferrous_ui_core/docs/: CORE.md  README.md  creating-widgets.md
crates/ferrous_ui_core/docs/widgets/: accordion.md  aspect_ratio.md  button.md  checkbox.md  color_picker.md  data_table.md  dock_layout.md  drop_down.md  image.md  label.md  modal.md  number_input.md  panel.md  placeholder.md  progress_bar.md  (+15 more)
crates/ferrous_ui_core/src/: animation.rs  background.rs  context.rs  controller.rs  events.rs  fui_loader.rs  lib.rs  primitives.rs  reactive.rs  reflect.rs  render_collector.rs  render_command.rs  spatial_index.rs  style_builder.rs  text_field_state.rs  theme.rs  ui_tree.rs  widget_trait.rs  widgets.rs
crates/ferrous_ui_render/: Cargo.toml  test_batch  test_batch.rs
crates/ferrous_ui_render/docs/: README.md  RENDER.md
crates/ferrous_ui_render/src/: gadgets.rs  gpu_types.rs  gui_batch.rs  gui_renderer.rs  lib.rs  text_utils.rs  to_batches.rs
crates/ferrous_voxels/: Cargo.toml
crates/ferrous_voxels/examples/: hdda_viewer.rs
crates/ferrous_voxels/src/: lib.rs
crates/ferrous_web/: Cargo.toml  README.md  index.html  serve_https.py  server.pem  sim.py
crates/ferrous_web/src/: camera.rs  commands.rs  config.rs  dispatcher.rs  engine.rs  entity.rs  lib.rs  plugin.rs  runtime.rs
crates/ferrous_web/types/: index.d.ts
(+202 files in other folders)
