[workspace]
members = [
    "crates/ferrous_ecs",
    "crates/ferrous_core",
    "crates/ferrous_renderer",
    "crates/ferrous_editor",
    "crates/ferrous_gui",
    "crates/ferrous_assets",
    "crates/ferrous_app",
    "crates/ferrous_asset_types",
    "crates/ferrous_font",
]
resolver = "2"

[workspace.dependencies]
wgpu = "23.0" # O la versión más estable actual
glam = { version = "0.29", features = ["bytemuck"] }
# el motor tendrá su propio sistema de UI; ya no dependemos de egui
winit = "0.30"
log = "0.4"
pollster = "0.3"
ferrous_ecs = { path = "crates/ferrous_ecs" }
