[workspace]
members = [
    "crates/ferrous_ecs",
    "crates/ferrous_core",
    "crates/ferrous_renderer",
    "crates/ferrous_editor",
    "crates/ferrous_gui",
    "crates/ferrous_assets",
    "crates/ferrous_app",
    "crates/ferrous_asset_types",
    "crates/ferrous_font",
    "crates/ferrous_render_graph",
    "crates/ferrous_ecs_macros",
    "crates/ferrous_ui_core",
    "crates/ferrous_layout",
    "crates/ferrous_events", "crates/ferrous_ui_render",
    "crates/ferrous_ui_macros",
    "crates/ferrous_voxels",
    "crates/ferrous_svg", "crates/ferrous_state", "crates/ferrous_reflection",
    "crates/ferrous_web", "crates/ferrous_2d",
]
resolver = "2"

[workspace.dependencies]
wgpu = { version = "23.0", features = ["webgpu", "webgl", "fragile-send-sync-non-atomic-wasm"] }
glam = { version = "0.29", features = ["bytemuck", "serde"] }
# el motor tendrá su propio sistema de UI; ya no dependemos de egui
winit = "0.30"
log = "0.4"
pollster = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ferrous_ecs = { path = "crates/ferrous_ecs" }
ferrous_gpu = { path = "crates/ferrous_gpu" }
