[package]
name = "ferrous_app"
version = "0.1.0"
edition = "2021"

[dependencies]
ferrous_renderer = { path = "../ferrous_renderer", features = ["assets"] }
ferrous_core = { path = "../ferrous_core" }
ferrous_ecs = { path = "../ferrous_ecs" }
ferrous_gpu = { path = "../ferrous_gpu" }
winit = "0.30"
ferrous_gui = { path = "../ferrous_gui" }
wgpu = "23.0"
ferrous_assets = { path = "../ferrous_assets" }
fern = "0.6"
anyhow = "1.0"
log = "0.4"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# ── desktop-only ────────────────────────────────────────────────────────────
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Blocking async executor — used to drive GraphicsState::new on desktop.
pollster = "0.3"

# ── wasm32 ────────────────────────────────────────────────────────────────
[target.'cfg(target_arch = "wasm32")'.dependencies]
# Async executor for the browser event loop.
wasm-bindgen-futures = "0.4"
# JS interop: expose run() as a JS function and access the DOM canvas.
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlCanvasElement"] }
# Drop-in Instant for wasm.
web-time = "1.1"
# Pretty panic messages in the browser console.
console_error_panic_hook = "0.1"

