[package]
name = "ferrous_assets"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "23.0"
anyhow = "1.0"
bytemuck = { version = "1.14", features = ["derive"] }
image = "0.24"
gltf = { version = "1.4", features = ["import", "utils"] }
ferrous_core = { path = "../ferrous_core" }
half = "2.3"


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.7"

[dev-dependencies]
pollster = "0.3"
