[package]
name = "ferrous_assets"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = { version = "23.0", optional = true }
anyhow = "1.0"
bytemuck = { version = "1.14", features = ["derive"], optional = true }
image = "0.24"
gltf = { version = "1.4", features = ["import", "utils"] }
half = { version = "2.3", optional = true }

[features]
default = []
gpu = ["dep:wgpu", "dep:bytemuck", "dep:half"]


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.7"
notify = "6.1"

[dev-dependencies]
pollster = "0.3"
