[package]
name = "ferrous_core"
version = "0.1.0"
edition = "2021"

# core types depend on simple math utilities; use the workspace version of glam
[dependencies]
glam = { workspace = true }
wgpu = "23.0"
anyhow = "1.0"
thiserror = "1.0"
# needed for input types and later editor/event loop
winit = "0.30"

# used by camera uniform definitions
bytemuck = { version = "1.17", features = ["derive"] }

# NOTE: we intentionally do *not* depend on `ferrous_renderer` here.  the
# material handle/descriptor types used by the core scene live in this
# crate instead so that we avoid a cyclic dependency (the renderer already
# depends on `ferrous_core`).  `ferrous_renderer` will re-export these types
# for convenience.
ferrous_ecs = { workspace = true }
# ── desktop-only (process metrics via OS APIs) ────────────────────────────
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
once_cell = "1.18"
sysinfo = "0.28"

# ── wasm32 ────────────────────────────────────────────────────────────────
[target.'cfg(target_arch = "wasm32")'.dependencies]
# Drop-in replacement for std::time::Instant that works in the browser.
web-time = "1.1"
