[package]
name = "ferrous_core"
version = "0.1.0"
edition = "2021"

# core types depend on simple math utilities; use the workspace version of glam
 [dependencies]
 glam = { workspace = true }
 wgpu = { version = "23.0", optional = true }
 anyhow = "1.0"
 thiserror = "1.0"
 # needed for input types and later editor/event loop
 winit = { version = "0.30", optional = true }

 # used by camera uniform definitions
 bytemuck = { version = "1.17", features = ["derive"], optional = true }

# NOTE: we intentionally do *not* depend on `ferrous_renderer` here.  the
# material handle/descriptor types used by the core scene live in this
# crate instead so that we avoid a cyclic dependency (the renderer already
# depends on `ferrous_core`).  `ferrous_renderer` will re-export these types
# for convenience.
ferrous_ecs = { workspace = true, optional = true }
# ── desktop-only (process metrics via OS APIs) ────────────────────────────
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
once_cell = "1.18"
sysinfo = "0.28"

# ── wasm32 ────────────────────────────────────────────────────────────────
[target.'cfg(target_arch = "wasm32")'.dependencies]
# Drop-in replacement for std::time::Instant that works in the browser.
web-time = "1.1"

# features
[features]
default = []
ecs = ["dep:ferrous_ecs"]

# The `gpu` feature gates all wgpu-related types in this crate, allowing
# downstream consumers to compile `ferrous_core` without dragging in the
# heavy GPU dependency.  Engine apps such as the editor or renderer will
# enable this unconditionally.
gpu = ["wgpu", "bytemuck"]

# Input events (winit) are only pulled in when the `input` feature is
# requested.  This keeps headless builds free of windowing dependencies.
input = ["winit"]
