[package]
name = "ferrous_ecs"
version = "0.1.0"
edition = "2021"
description = "Archetype-based Entity Component System for Ferrous Engine"

[features]
 # Enable the parallel scheduler (uses rayon thread pool).
 parallel = ["dep:rayon"]
 # Derive macros for ergonomics; enabled by default so users get
 # `#[derive(Component)]` without extra flags.  The optional dependency
 # points to the proc-macro crate in the workspace.
 derive = ["ferrous_ecs_macros"]
 default = ["derive"]

[dependencies]
# ECS is pure data; it doesn't actually use `glam` in any source files.  the
# dependency was accidental and just increased compile times.  remove it to
# keep this crate lightweight.
rayon = { version = "1", optional = true }
ferrous_ecs_macros = { path = "../ferrous_ecs_macros", optional = true }

[dev-dependencies]
# nothing yet
