[package]
name = "ferrous_editor"
version = "0.1.0"
edition = "2021"

[dependencies]
ferrous_core = { path = "../ferrous_core" }
ferrous_renderer = { path = "../ferrous_renderer" }
ferrous_gui = { path = "../ferrous_gui" }
ferrous_assets = { path = "../ferrous_assets" }

ferrous_app = { path = "../ferrous_app" }

# direct GPU types for configuration
wgpu = "23.0"


# windowing and event loop
winit = "0.30"
# helper to block on async initialization
pollster = "0.3"

# egui no longer exposes a "winit" feature; the winit integration
# is provided by a separate crate (egui_winit) or handled manually in
# user code. For now we simply depend on egui itself and will add
# the winit integration in the editor binary later when it's needed.
# Eguis removed; tendremos nuestro propio motor UI en ferrous_gui
# egui = "0.29"

# random helper for positioning cubes
rand = "0.8"
