[package]
name = "ferrous_gui"
version = "0.1.0"
edition = "2021"

[dependencies]

wgpu = "23.0"
bytemuck = { version = "1.14", features = ["derive"] } # habilita macros derive para Pod/Zeroable

# glam may be convenient; bring in for math types
glam = "0.29"

# font atlas generator lives in the assets crate
ferrous_assets = { path = "../ferrous_assets" }

# the UI library uses `InputState` type when routing events; pull in core so
# users don't need to import it separately.
ferrous_core = { path = "../ferrous_core" }
# we expose some input-related helpers that rely on winit key codes;
# adding a dependency here keeps the types available for users of the
# GUI library. This is a lightweight crate and is already used by the
# editor project.
winit = "0.30"
