[package]
name = "ferrous_gui"
version = "0.1.0"
edition = "2021"

[dependencies]

wgpu = "23.0"
bytemuck = { version = "1.14", features = ["derive"] } # habilita macros derive para Pod/Zeroable

# glam may be convenient; bring in for math types
glam = "0.29"

# font atlas generator lives in the assets crate
ferrous_assets = { path = "../ferrous_assets", optional = true, features = ["gpu","text"] }

# the font crate is pulled in when text support is requested; this mirrors the
# dependency declared in `ferrous_assets` and allows `ferrous_gui` to refer
# directly to `ferrous_font` types when needed.
ferrous_font = { path = "../ferrous_font", optional = true }

# the UI library uses `InputState` type when routing events; pull in core so
# users don't need to import it separately.
ferrous_core = { path = "../ferrous_core" }
# we expose some input-related helpers that rely on winit key codes;
# adding a dependency here keeps the types available for users of the
# GUI library. This is a lightweight crate and is already used by the
# editor project.
winit = { version = "0.30", optional = true }

half = { version = "2.3", optional = true }

[features]
default = ["text", "winit-backend"]
text = ["dep:ferrous_assets", "ferrous_assets/gpu", "dep:ferrous_font"]
winit-backend = ["dep:winit"]
# enable support for image widgets and other code that depends on the
# `ferrous_assets` crate without pulling in the `ferrous_font`/text
# functionality. this is mainly used by the new `Image` widget and by
# the renderer's texture slot logic.
assets = ["dep:ferrous_assets", "ferrous_assets/gpu"]
