[package]
name = "ferrous_renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "23.0"
anyhow = "1.0"
thiserror = "1.0"
ferrous_core = { path = "../ferrous_core", features = ["ecs"] }
ferrous_gui = { path = "../ferrous_gui", optional = true }
bytemuck = { version = "1.14", features = ["derive"] }
glam = { workspace = true }
image = { version = "0.25", optional = true, default-features = false, features = ["png", "jpeg"] }
ferrous_assets = { path = "../ferrous_assets" }
log = "0.4"
rand = "0.8"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.11.0"

[dev-dependencies]
pollster = "0.3"
# image is used by tests/examples but we now also expose it as an optional
# feature for runtime texture loading (png/jpeg).  we keep the dev-dependency
# at 0.24 so that existing tests continue to compile when the feature flag is
# disabled; the optional dependency below is the one that will be used by
# consumers when they enable `--features image`.
[features]
default = ["gui"]
gui = ["dep:ferrous_gui"]
image = ["dep:image"]
