[package]
name = "ferrous_ui_core"
version = "0.1.0"
edition = "2021"

[dependencies]
ferrous_reflection = { path = "../ferrous_reflection" }
slotmap = "1.0"
glam = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
ferrous_assets = { path = "../ferrous_assets", optional = true }
ferrous_ui_macros = { path = "../ferrous_ui_macros" }
ferrous_svg = { path = "../ferrous_svg" }
serde_json = "1.0.149"

[features]
assets = ["dep:ferrous_assets"]
